# excel2everything

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
src/dataforge/: __init__.py  cli.py
src/dataforge/analyzer/: __init__.py  dependency.py
src/dataforge/config/: __init__.py  models.py
src/dataforge/generator/: __init__.py  ddl.py  sql.py
src/dataforge/generator/templates/hive/: ddl.sql.j2
src/dataforge/generator/templates/inceptor/: ddl.sql.j2  procedure.sql.j2
src/dataforge/generator/templates/mysql/: ddl.sql.j2
src/dataforge/generator/templates/oceanbase/: insert.sql.j2  procedure.sql.j2
src/dataforge/generator/templates/postgresql/: ddl.sql.j2
src/dataforge/models/: __init__.py  base.py
src/dataforge/parser/: __init__.py  excel.py  rule_engine.py
src/dataforge/validator/: __init__.py  sql.py
src/excel2everything/: __init__.py  cli.py
src/excel2everything/analyzer/: __init__.py  dependency.py
src/excel2everything/config/: loader.py  models.py
src/excel2everything/generator/: __init__.py  ddl.py  sql.py
src/excel2everything/generator/templates/inceptor/: insert.sql.j2  procedure.sql.j2
src/excel2everything/generator/templates/oceanbase/: ddl.sql.j2  procedure.sql.j2
src/excel2everything/generator/templates/oracle/: ddl.sql.j2
src/excel2everything/models/: __init__.py  base.py
src/excel2everything/parser/: __init__.py  excel.py  rule_engine.py
src/excel2everything/validator/: __init__.py  sql.py
templates/: DataForgeMacros.bas  ThisWorkbook_code.txt  VBA导入说明.txt
tests/: test_core.py
